@@ -1,14 +1,13 @@
 package com.newestworld.content.messaging;
 
-import com.newestworld.commons.model.ActionParameters;
-import com.newestworld.commons.model.CompoundActionStructure;
-import com.newestworld.content.facade.CompoundActionFacade;
-import com.newestworld.content.facade.CompoundActionStructureFacade;
-import com.newestworld.content.service.ActionParamsService;
-import com.newestworld.content.service.BasicActionService;
+import com.newestworld.commons.model.*;
+import com.newestworld.content.facade.ActionFacade;
+import com.newestworld.content.facade.ActionStructureFacade;
+import com.newestworld.content.service.StructureParameterService;
+import com.newestworld.content.service.NodeService;
 import com.newestworld.streams.event.*;
 import com.newestworld.streams.event.batch.ActionDataRequestBatchEvent;
-import com.newestworld.streams.event.batch.CompoundActionDataBatchEvent;
+import com.newestworld.streams.event.batch.ActionDataBatchEvent;
 import com.newestworld.streams.publisher.EventPublisher;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,34 +16,46 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 @RequiredArgsConstructor
 public class ActionDataRequestBatchEventConsumer implements Consumer<ActionDataRequestBatchEvent> {
 
-    private final BasicActionService basicActionService;
-    private final ActionParamsService actionParamsService;
-    private final CompoundActionFacade compoundActionFacade;
-    private final CompoundActionStructureFacade compoundActionStructureFacade;
-    private final EventPublisher<CompoundActionDataBatchEvent> actionDataBatchEventPublisher;
+    private final NodeService nodeService;
+    private final StructureParameterService structureParameterService;
+    private final ActionFacade actionFacade;
+    private final ActionStructureFacade actionStructureFacade;
+    private final EventPublisher<ActionDataBatchEvent> actionDataBatchEventPublisher;
 
     @Override
     public void accept(final ActionDataRequestBatchEvent event)  {
         log.debug("Data request received for {} actions", event.getSize());
         List<ActionDataRequestEvent> requests = new ArrayList<>(event.getBatch());
-        List<CompoundActionDataEvent> dataEvents = new ArrayList<>();
+        List<ActionDataEvent> dataEvents = new ArrayList<>();
 
-        for (ActionDataRequestEvent request : requests) {
-            CompoundActionStructure structure = compoundActionStructureFacade.findById(compoundActionFacade.findById(request.getId()).getStructureId());
-            List<BasicActionEvent> basicActions = basicActionService.findAllById(structure.getId())
-                    .stream().map(BasicActionEvent::new).collect(Collectors.toList());
-            ActionParameters input = actionParamsService.findById(request.getId());
-            dataEvents.add(new CompoundActionDataEvent(request.getId(), input, basicActions));
+        for (final ActionDataRequestEvent request : requests) {
+            final Action action = actionFacade.findById(request.getId());
+            final ActionStructure structure = actionStructureFacade.findById(action.getStructureId());
+            final List<NodeEvent> nodes = nodeService.findAllById(structure.getId())
+                    .stream().map(NodeEvent::new).toList();
+            final List<StructureParameter> structureParameters = structureParameterService.findById(action.getStructureId());
+
+            List<ModelParameter> parameters = new ArrayList<>();
+            for (final StructureParameter structureParameter : structureParameters) {
+                parameters.add(new ModelParameter(
+                        structureParameter.getName(),
+                        structureParameter.isRequired(),
+                        action.getParameters().get(structureParameter.getName()),
+                        structureParameter.getType(),
+                        structureParameter.getMin(),
+                        structureParameter.getMax()
+                ));
+            }
+            dataEvents.add(new ActionDataEvent(request.getId(), new ModelParameters.Impl(parameters), nodes));
         }
 
-        actionDataBatchEventPublisher.send(new CompoundActionDataBatchEvent(dataEvents));
+        actionDataBatchEventPublisher.send(new ActionDataBatchEvent(dataEvents));
     }
 
 }
